--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,9 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.6.5",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
+    "events": "^3.3.0",
+    "express": "^4.18.2",
+    "express-validation": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mock-express-response": "^0.3.0",
+    "moment": "^2.30.1",
+    "mqtt": "^5.3.4",
+    "mysql2": "^3.7.0",
+    "sequelize": "^6.35.2"
+  }
 }
