--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +24,7 @@
     "moment": "^2.30.1",
     "mqtt": "^5.3.4",
     "mysql2": "^3.7.0",
+    "node-schedule": "^2.1.1",
     "sequelize": "^6.35.2"
   }
 }
