--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "model:generate": "npx sequelize-cli model:generate --name",
+    "db:migrate": "npx sequelize-cli db:migrate",
+    "db:migrate:undo": "npx sequelize-cli db:migrate:undo",
+    "db:migrate:undo:all": "npx sequelize-cli db:migrate:undo:all",
+    "seed:generate": "npx sequelize-cli seed:generate --name",
+    "db:seed:all": "npx sequelize-cli db:seed:all",
+    "db:seed:undo": "npx sequelize-cli db:seed:undo",
+    "db:seed:undo:all": "npx sequelize-cli db:seed:undo:all"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +33,8 @@
     "mqtt": "^5.3.4",
     "mysql2": "^3.7.0",
     "node-schedule": "^2.1.1",
-    "sequelize": "^6.35.2"
+    "nodemon": "^3.1.0",
+    "sequelize": "^6.35.2",
+    "sequelize-cli": "^6.6.2"
   }
 }
